adding handler for github project request

--- a/New_app/templates/main.html
+++ b/New_app/templates/main.html
@@ -70,7 +70,7 @@
     <!-- Simple Textfield -->
 <form id="projectform" action="/submitproject" method="get" >
   <div class="mdl-textfield mdl-js-textfield textfield-demo">
-    <input class="mdl-textfield__input" type="text" id="sample1" />
+    <input class="mdl-textfield__input" type="text" id="sample1" name="github-url" />
     <label class="mdl-textfield__label" for="sample1">Github URL...</label>
   </div>
 </form>
