--- a/New_app/templates/contributors_list.html
+++ b/New_app/templates/contributors_list.html
@@ -17,7 +17,6 @@
   }
   .demo-card-square > .mdl-card__title {
     color: #fff;
-
     background:
       url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
   }
@@ -28,113 +27,29 @@
     margin-right: auto;
   }
 </style>
+{% for contributor in Contributors %}
+<div class="mdl-card mdl-shadow--2dp demo-card-square">
+  <div class="mdl-card__title mdl-card--expand" style="background: url('{{contributor["image_url"]}}') bottom right 15% no-repeat #46B6AC;
+; ">
+    <h2 class="mdl-card__title-text">{{contributor["username"]}}</h2>
+  </div>
+  <div class="mdl-card__supporting-text">
+    Race:
+    <form action="">
+    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
+    <input type="radio" name="race" value="BAA">Black or African American<br>
+    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
+    <input type="radio" name="race" value="WHI">White <br>
+    Ethnicity<br>
+    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
+    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
+    </form>
+  </div>
+</div>
+{% end %}
 
-<div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Luciano Arango</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Race:
-    <form action="">
-    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
-    <input type="radio" name="race" value="BAA">Black or African American<br>
-    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
-    <input type="radio" name="race" value="WHI">White <br>
-    Ethnicity<br>
-    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
-    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
-    </form>
-  </div>
-</div>
-<div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Luciano Arango</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Race:
-    <form action="">
-    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
-    <input type="radio" name="race" value="BAA">Black or African American<br>
-    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
-    <input type="radio" name="race" value="WHI">White <br>
-    Ethnicity<br>
-    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
-    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
-    </form>
-  </div>
-</div>
 
-<div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Luciano Arango</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Race:
-    <form action="">
-    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
-    <input type="radio" name="race" value="BAA">Black or African American<br>
-    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
-    <input type="radio" name="race" value="WHI">White <br>
-    Ethnicity<br>
-    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
-    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
-    </form>
-  </div>
-</div>
 
-<div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Luciano Arango</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Race:
-    <form action="">
-    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
-    <input type="radio" name="race" value="BAA">Black or African American<br>
-    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
-    <input type="radio" name="race" value="WHI">White <br>
-    Ethnicity<br>
-    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
-    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
-    </form>
-  </div>
-</div>
-
-<div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Luciano Arango</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Race:
-    <form action="">
-    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
-    <input type="radio" name="race" value="BAA">Black or African American<br>
-    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
-    <input type="radio" name="race" value="WHI">White <br>
-    Ethnicity<br>
-    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
-    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
-    </form>
-  </div>
-</div>
-
-<div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Luciano Arango</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Race:
-    <form action="">
-    <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
-    <input type="radio" name="race" value="BAA">Black or African American<br>
-    <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
-    <input type="radio" name="race" value="WHI">White <br>
-    Ethnicity<br>
-    <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
-    <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
-    </form>
-  </div>
-</div>
 
 
 <!-- Accent-colored raised button with ripple -->
