--- a/New_app/templates/main.html
+++ b/New_app/templates/main.html
@@ -32,7 +32,7 @@
   .demo-card-square > .mdl-card__title {
     color: #fff;
     background:
-      url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
+      url('../assets/demos/dog.png') bottom right 15% no-repeat rgb(33,150,243);
   }
   .hide{
     display: none;
