--- a/New_app/templates/contributors_list.html
+++ b/New_app/templates/contributors_list.html
@@ -3,10 +3,8 @@
 {% block title %}Diversity in Code Projects{% end %}
 
 {% block body %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.blue-pink.min.css" />
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
 <!-- Square card -->
 <style>
   .demo-card-square.mdl-card {
@@ -18,7 +16,7 @@
   .demo-card-square > .mdl-card__title {
     color: #fff;
     background:
-      url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
+      url('../assets/demos/dog.png') bottom right 15% no-repeat rgb(33,150,243);
   }
   .main-button{
     width: 100px;
@@ -27,6 +25,7 @@
     margin-right: auto;
   }
 </style>
+<h2> Contributors for {{project}} </h2>
 {% for contributor in Contributors %}
 <div class="mdl-card mdl-shadow--2dp demo-card-square">
   <div class="mdl-card__title mdl-card--expand" style="background: url('{{contributor["image_url"]}}') bottom right 15% no-repeat #46B6AC;
@@ -35,7 +34,7 @@
   </div>
   <div class="mdl-card__supporting-text">
     Race:
-    <form action="">
+    <form class="Backgroundform" name="background" action="" data-name="{{contributor["username"]}}" data-project="{{project}}">
     <input type="radio" name="race" value="AIAN">American Indian or Alaska Native <br>
     <input type="radio" name="race" value="BAA">Black or African American<br>
     <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
@@ -53,9 +52,70 @@
 
 
 <!-- Accent-colored raised button with ripple -->
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent main-button">
+<button id="submit-button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent main-button">
   Submit
 </button>
+<script >
+var project = "{{project}}"
+var Users = []
+$("#submit-button").on("click", CollectInformation)
 
+
+function CollectInformation() {
+  Users = []
+  $(".Backgroundform").each(function(d){
+    that = this
+     var user = { "username": this.getAttribute("data-name"),
+                  "race": null,
+                  "ethnicity": null }
+     for (var i=0; i<that.childNodes.length; i++)  {
+       if (that.childNodes[i].type == "radio" && that.childNodes[i].checked)  {
+        user[that.childNodes[i].name] = that.childNodes[i].value
+       }
+      }
+      if ( !user["race"] ){
+        alert("Please select " + user["username"]+"'s race" )
+        return false
+      }
+      else if ( !user["ethnicity"] ){
+        alert("Please select " + user["username"]+"'s ethnicity" )
+        return false
+      }
+      Users.push(user)
+  })
+
+  if (Users.length == $(".Backgroundform").length){
+
+     post("/diversityinfo", {"users":JSON.stringify(Users), "project":project} )
+
+  }
+}
+
+
+
+function post(path, params, method) {
+    method = method || "post"; // Set method to post by default if not specified.
+
+    // The rest of this code assumes you are not using a library.
+    // It can be made less wordy if you use one.
+    var form = document.createElement("form");
+    form.setAttribute("method", method);
+    form.setAttribute("action", path);
+
+    for(var key in params) {
+        if(params.hasOwnProperty(key)) {
+            var hiddenField = document.createElement("input");
+            hiddenField.setAttribute("type", "hidden");
+            hiddenField.setAttribute("name", key);
+            hiddenField.setAttribute("value", params[key]);
+
+            form.appendChild(hiddenField);
+         }
+    }
+
+    document.body.appendChild(form);
+    form.submit();
+}
+</script>
 {% end %}
 
