Add main visualization

--- a/New_app/templates/base.html
+++ b/New_app/templates/base.html
@@ -4,7 +4,13 @@
      <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.blue-pink.min.css" />
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>{% block title %}Default title{% end %}</title>
+    <title>{% block title %}Code Diversit{% end %}</title>
+    <style >
+    .page-content{
+      margin-right: 10px;
+      margin-left:10px;
+      }
+      </style>
   </head>
   <body>
     <!-- Always shows a header, even in smaller screens. -->
@@ -12,7 +18,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Title</span>
+      <span class="mdl-layout-title">Code Diversity</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
@@ -25,7 +31,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
+    <span class="mdl-layout-title">Code Diversity</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Link</a>
       <a class="mdl-navigation__link" href="">Link</a>
