--- a/New_app/templates/contributors_list.html
+++ b/New_app/templates/contributors_list.html
@@ -9,7 +9,7 @@
 <style>
   .demo-card-square.mdl-card {
     width: 320px;
-    height: 320px;
+    height: 380px;
     display: inline-flex;
     margin: 10px;
   }
@@ -17,21 +17,27 @@
     color: #fff;
     background:
       url('../assets/demos/dog.png') bottom right 15% no-repeat rgb(33,150,243);
+    text-shadow: 1.5px 1.5px #000000;
+    font-size: 30px;
+}
   }
   .main-button{
-    width: 100px;
+    width: 120px;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
 </style>
-<h2> Contributors for {{project}} </h2>
+<h2> Contributors</h2>
+<h3> {{project.split("/")[3]+"/"+project.split("/")[4]}} </h3>
 {% for contributor in Contributors %}
 <div class="mdl-card mdl-shadow--2dp demo-card-square">
-  <div class="mdl-card__title mdl-card--expand" style="background: url('{{contributor["image_url"]}}') bottom right 15% no-repeat #46B6AC;
+
+  <div class="mdl-card__title mdl-card--expand" style="background: url('{{contributor["image_url"]}}') center 15% no-repeat rgb(33,150,243);
 ; ">
-    <h2 class="mdl-card__title-text">{{contributor["username"]}}</h2>
+    <h2 class="mdl-card__title-text" style="font-size: 28px;">{{contributor["username"]}}</h2>
   </div>
+
   <div class="mdl-card__supporting-text">
     Race:
     <form class="Backgroundform" name="background" action="" data-name="{{contributor["username"]}}" data-project="{{project}}">
