--- a/New_app/templates/main.html
+++ b/New_app/templates/main.html
@@ -23,7 +23,7 @@
   }
 
   .demo-card-square.mdl-card {
-    width: 320px;
+    width: 370px;
     height: 250px;
     top: 190px;
     margin-right: auto;
@@ -69,7 +69,7 @@
     Please enter your github project URL
     <!-- Simple Textfield -->
 <form id="projectform" action="/submitproject" method="get" >
-  <div class="mdl-textfield mdl-js-textfield textfield-demo">
+  <div class="mdl-textfield mdl-js-textfield textfield-demo" style="width: 340px;">
     <input class="mdl-textfield__input" type="text" id="sample1" name="github-url" />
     <label class="mdl-textfield__label" for="sample1">Github URL...</label>
   </div>
