asian inclusion and easy script

--- a/New_app/templates/contributors_list.html
+++ b/New_app/templates/contributors_list.html
@@ -45,6 +45,7 @@
     <input type="radio" name="race" value="BAA">Black or African American<br>
     <input type="radio" name="race" value="NHOPI">Native Hawaiian or Other Pacific Islander:<br>
     <input type="radio" name="race" value="WHI">White <br>
+    <input type="radio" name="race" value="ASIN">Asian <br>
     Ethnicity<br>
     <input type="radio" name="ethnicity" value="HL">Hispanic or Latino<br>
     <input type="radio" name="ethnicity" value="NHL">Not Hispanic of Latino<br>
