Two graphs working

--- a/New_app/templates/viz.html
+++ b/New_app/templates/viz.html
@@ -223,7 +223,7 @@ $(window).load( function() {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Temperature (ºF)");
+      .text("Active Contributors");
       console.log(cities)
   var city = svg.selectAll(".city")
       .data(cities)
