--- a/New_app/templates/viz.html
+++ b/New_app/templates/viz.html
@@ -109,7 +109,9 @@ body {
   text-align: center;
 }
 .steamographtooltip{
-  position: fixed
+    position: absolute;
+    left: 50%;
+    top: 50%;
 }
 /* Style northward tooltips differently */
 .d3-tip.n:after {
@@ -141,7 +143,7 @@ body {
 <div id="multilinegraph">
 <h4 class="titleofgraph"> Racial Makeup of Active Contributors over Time</h4><br><br><br>
 </div>
-<div id="steamograph"><h4 class="titleofgraph"> CodeDiversity&trade;</h4></div>
+<div id="steamograph"><h4 class="titleofgraph"> CodeDiversity&trade;</h4><h5 id="dynamicinformation" style="text-align:center;"><h5></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
@@ -195,6 +197,7 @@ $(window).load( function() {
         if (Alldata.hasOwnProperty(key)) {
           // console.log(parseDate(key))
           // console.log(Alldata[key])
+          console.log()
           prevalues.push({date: new Date(key*1000), temperature: parseInt(Alldata[key][name]["ac"])})
         }
     }
@@ -348,5 +351,191 @@ function type(d) {
 
 </script>
 
+<script>
 
+chart("orange");
+
+var datearray = [];
+var colorrange = [];
+
+
+function chart( color) {
+
+if (color == "blue") {
+  colorrange = ["#045A8D", "#2B8CBE", "#74A9CF", "#A6BDDB", "#D0D1E6", "#F1EEF6"];
+}
+else if (color == "pink") {
+  colorrange = ["#980043", "#DD1C77", "#DF65B0", "#C994C7", "#D4B9DA", "#F1EEF6"];
+}
+else if (color == "orange") {
+  colorrange = ["#B30000", "#E34A33", "#FC8D59", "#FDBB84", "#FDD49E", "#FEF0D9"];
+}
+strokecolor = colorrange[0];
+
+var format = d3.time.format("%m/%d/%y");
+
+var margin = {top: 20, right: 40, bottom: 30, left: 30};
+var width = document.body.clientWidth - margin.left - margin.right;
+var height = 400 - margin.top - margin.bottom;
+
+var tooltip = d3.select("body")
+    .append("div")
+    .attr("class", "remove")
+    .style("position", "absolute")
+    .style("z-index", "20")
+    .style("visibility", "hidden")
+    .style("top", "30px")
+    .style("left", "55px");
+
+var xStem = d3.time.scale()
+    .range([0, width]);
+
+var yStem = d3.scale.linear()
+    .range([height-10, 0]);
+
+var z = d3.scale.ordinal()
+    .range(colorrange);
+
+var xAxisStem = d3.svg.axis()
+    .scale(xStem)
+    .orient("bottom")
+    .ticks(d3.time.months);
+
+var yAxisStem = d3.svg.axis()
+    .scale(yStem);
+
+var yAxisr = d3.svg.axis()
+    .scale(yStem);
+
+var stack = d3.layout.stack()
+    .offset("silhouette")
+    .values(function(d) { return d.values; })
+    .x(function(d) { return d.date; })
+    .y(function(d) { return d.value; });
+
+var nest = d3.nest()
+    .key(function(d) { return d.key; });
+
+var area = d3.svg.area()
+    .interpolate("cardinal")
+    .x(function(d) { return xStem(d.date); })
+    .y0(function(d) { return yStem(d.y0); })
+    .y1(function(d) { return yStem(d.y0 + d.y); });
+
+var svgStem = d3.select("#steamograph").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var graph = $(window).load( function() {
+  data = []
+    for (var key in Alldata) {
+        if (Alldata.hasOwnProperty(key)) {
+          // console.log(parseDate(key))
+
+          for(var innerkey in Alldata[key]){
+            if (Alldata[key].hasOwnProperty(innerkey)) {
+               data.push({date: new Date(key*1000), key:innerkey, value: parseInt(Alldata[key][innerkey]["c"])})
+          }
+        }
+    }
+
+  }
+
+
+
+  var layers = stack(nest.entries(data));
+
+  xStem.domain(d3.extent(data, function(d) { return d.date; }));
+  yStem.domain([0, d3.max(data, function(d) { return d.y0 + d.y; })]);
+
+  svgStem.selectAll(".layer")
+      .data(layers)
+    .enter().append("path")
+      .attr("class", "layer")
+      .attr("d", function(d) { return area(d.values); })
+      .style("fill", function(d, i) { return z(i); });
+
+
+  svgStem.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxisStem);
+
+  svgStem.append("g")
+      .attr("class", "y axis")
+      .attr("transform", "translate(" + width + ", 0)")
+      .call(yAxisStem.orient("right"));
+
+  svgStem.append("g")
+      .attr("class", "y axis")
+      .call(yAxisStem.orient("left"));
+
+  svgStem.selectAll(".layer")
+    .attr("opacity", 1)
+    .on("mouseover", function(d, i) {
+      svgStem.selectAll(".layer").transition()
+      .duration(250)
+      .attr("opacity", function(d, j) {
+        return j != i ? 0.6 : 1;
+    })})
+
+    .on("mousemove", function(d, i) {
+      mousex = d3.mouse(this);
+      mousex = mousex[0];
+      var invertedx = xStem.invert(mousex);
+      invertedx = invertedx.getMonth() + invertedx.getDate();
+      var selected = (d.values);
+      for (var k = 0; k < selected.length; k++) {
+        datearray[k] = selected[k].date
+        datearray[k] = datearray[k].getMonth() + datearray[k].getDate();
+      }
+
+      mousedate = datearray.indexOf(invertedx);
+      console.log(mousedate)
+      console.log(d.values[mousedate])
+      pro = d.values[mousedate].value;
+
+      d3.select(this)
+      .classed("hover", true)
+      .attr("stroke", strokecolor)
+      .attr("stroke-width", "0.5px"),
+      $("#dynamicinformation").html( d.key + "<br>" + pro).style("visibility", "visible");
+
+    })
+    .on("mouseout", function(d, i) {
+     svgStem.selectAll(".layer")
+      .transition()
+      .duration(250)
+      .attr("opacity", "1");
+      d3.select(this)
+      .classed("hover", false)
+      .attr("stroke-width", "0px"), $("#dynamicinformation").html( d.key + "<br>" + pro).style("visibility", "hidden");
+  })
+
+  var vertical = d3.select("#steamograph")
+        .append("div")
+        .attr("class", "remove")
+        .style("position", "absolute")
+        .style("z-index", "19")
+        .style("width", "1px")
+        .style("height", "380px")
+        .style("top", "10px")
+        .style("bottom", "30px")
+        .style("left", "0px")
+        .style("background", "#fff");
+
+  d3.select("#steamograph")
+      .on("mousemove", function(){
+         mousex = d3.mouse(this);
+         mousex = mousex[0] + 5;
+         vertical.style("left", mousex + "px" )})
+      .on("mouseover", function(){
+         mousex = d3.mouse(this);
+         mousex = mousex[0] + 5;
+         vertical.style("left", mousex + "px")});
+});
+}
+</script>
 {% end %}
