--- a/New_app/templates/base.html
+++ b/New_app/templates/base.html
@@ -10,6 +10,10 @@
       margin-right: 10px;
       margin-left:10px;
       }
+
+    .material-icons {
+      padding-top: 9px;
+    }
       </style>
   </head>
   <body>
@@ -23,20 +27,15 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
+        <a class="mdl-navigation__link" target="_blank" href="https://github.com/lucianoiscool">Luciano Arango</a>
+        <a class="mdl-navigation__link" target="_blank" href="https://github.com/kuntajts">Jordan Smith</a>
       </nav>
     </div>
   </header>
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Code Diversity</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" target="_blank" href="https://github.com/kuntajts/thanks_aisha">Thanks_Aisha</a>
     </nav>
   </div> <main class="mdl-layout__content">
     <div class="page-content">{% block body %}
