--- a/New_app/templates/main.html
+++ b/New_app/templates/main.html
@@ -37,6 +37,7 @@
   .hide{
     display: none;
   }
+
 </style>
 
 <div id="welcomecard" class="mdl-card mdl-shadow--2dp demo-card-wide">
@@ -84,6 +85,7 @@
 
 <script>
 $("#showProjectform").on("click", function(){
+  $("#welcomecard").remove()
   $("#projectsubmit").fadeIn()
 })
 
