--- a/New_app/templates/viz.html
+++ b/New_app/templates/viz.html
@@ -80,11 +80,11 @@ body {
 }
 
 .bar {
-  fill: orange;
+  fill: #4A6585;
 }
 
 .bar:hover {
-  fill: orangered ;
+  fill: #143359 ;
 }
 
 .x.axis path {
